# WireBender

./: .gitignore  .licenserc.yaml  CLA.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md  index.html
.github/workflows/: add-license-headers.yml  build-and-release.yml  cla.yml
doc/: WireBender-API.md
latest/: WireBender.js  WireBender.wasm  build_time.txt
src/: PcbVisualizer.cpp  PcbVisualizer.h  WireBender.cpp  WireBender.h  WireBenderTypes.h  js_preamble.js  wasm_bindings.cpp
src/internal/: Labelbot.h  NetClassifier.h  PcbGraph.h  PcbGraphAlgorithms.h  PcbPostProcessor.h  PcbRouter.h  SchematicAvoidRouter.h  SchematicNetlist.h  SchematicPlacer.h
src/internal/core/: Component.h  Debug.h  NetList.h  NetPin.h  NetRegistry.h  Pin.h  PlacementOptimizer.h  RouterShapePin.h  RouterState.h  RouterStats.h  RoutingResult.h  SchematicRouter.h  SchematicRouterOptions.h  ShapeRegistry.h
src/internal/core/bend/: Connector.h  ConnectorEnd.h  Junction.h  JunctionEdges.h  JunctionPointResult.h  OccupiedArea.h  OccupiedRect.h  Placement.h  Proxima.h  Transform.h  geometry.h  orthogonal.h  utils.h
v1.0.0/: build_time.txt
v1.0.1/: WireBender.js
v1.0.3/: build_time.txt
v1.0.4/: build_time.txt
v1.0.5/: WireBender.js  build_time.txt
v1.0.6/: WireBender.wasm  build_time.txt
wip/: WireBender.wasm  build_time.txt
